--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
   <meta http-equiv="expires" content="0">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Tayto." />
+  <meta name="description" content="Amidst the desolation and wonders of Planet Blast, a humble potato became the key to rescuing stranded astronauts. Now, this potato leads us into a new era of inscriptions." />
   <title>Tayto</title>
   <style>
     .screen {
